Feat Main entrypoint for the sudoku board

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Sudoku Challenge</title>
 </head>
 <body>
-<script src="./main.js"></script>
+    <div id="board"></div>
+    <script src="./main.js"></script>
 </body>
 </html>
