--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sudoku Challenge</title>
+    <link rel="stylesheet" href="./base.css" />
 </head>
 <body>
     <div id="board"></div>
